Corrected .education ctn added SASS and Bootstrap

--- a/assets/css/education.css
+++ b/assets/css/education.css
@@ -65,7 +65,7 @@
 @media screen and (min-width: 1200px) {
 
     .education .container {
-        justify-content: start;  
+        justify-content: space-between;  
     }
 
     .education__container {
